Fixed menu tick/text clipping
At particular menu widths, menu text and expansion tick could clip with one another. Increased the text's right padding and overflow handling to avoid this.

--- a/res/huroutes.css
+++ b/res/huroutes.css
@@ -256,6 +256,8 @@ ul a.dropdown-toggle {
   font-size: 1.1em;
   overflow: hidden;
   padding: 10px;
+  padding-right: 25px;
+  text-overflow: ellipsis;
 }
 ul ul a.dropdown-toggle {
   padding-left: 20px !important;
